<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/class_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        tools:context="edu.uml.android.keepthegrade.ClassActivity">

        <!--<WebView
            android:id="@+id/webview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:paddingLeft="100dp" />-->

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/CategoryTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <!-- Current Grade -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:text="@string/grade_total"/>
        <TextView
            android:id="@+id/currentGrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="20sp"
            android:text="A"/>
    </LinearLayout>

    <!-- Exam Grades -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        android:text="@string/grade_exams"/>
    </LinearLayout>

    <!-- Quiz Grades -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:text="@string/grade_quiz"/>
        <!-- Add a grade button here -->
    </LinearLayout>

    <!-- HW Grades -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:text="@string/grade_hw"/>
        <!-- Add a grade button here -->
    </LinearLayout>

    <!-- Final Grade -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="8dp"
            android:text="@string/grade_final_exam"/>
        <!-- Add a grade button here -->
    </LinearLayout>
</LinearLayout>
